latte/tests/bad/type/func/invalid_call_arg_type.lat
int f(int a, int b) {
  return 0;
}

int main() {
  return f(0, "asd");
}
